--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,14 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	    <groupId>org.apache.jena</groupId>
+	    <artifactId>apache-jena-libs</artifactId>
+	    <type>pom</type>
+	    <version>2.10.0</version>
+  	</dependency>
   </dependencies>
 </project>
